// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OpenTelemetryAdapter processes app event as span 1`] = `Array []`;

exports[`OpenTelemetryAdapter processes app event as span 2`] = `
Array [
  Object {
    "attributes": Object {
      "appRoleInstance": "{role instance value}",
      "appRoleName": "Web",
      "billedSize": 742,
      "clientCity": "San Jose",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientOs": "Windows_NT 10.0.14393",
      "clientStateOrProvince": "California",
      "clientType": "PC",
      "itemCount": 1,
      "name": "my custom event",
      "operationId": "98765",
      "parentId": "12345",
      "resourceGuid": "{guid of resource}",
      "resourceId": "/SUBSCRIPTIONS/{subscription Id}/RESOURCEGROUPS/{resource group in all caps}/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/{function app name in all caps}",
      "sdkVersion": "node:1.8.10",
      "timestamp": "2021-05-04T19:12:36.1850000Z",
      "type": "AppEvent",
    },
    "duration": undefined,
    "endTime": Array [
      1620155556,
      184999943,
    ],
    "ended": undefined,
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 1,
    "links": Array [],
    "name": "my custom event",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "Web",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "0.25.0",
      },
    },
    "spanContext": undefined,
    "spanId": undefined,
    "startTime": Array [
      1620155556,
      184999943,
    ],
    "status": Object {
      "code": 1,
    },
  },
  Object {
    "attributes": Object {
      "appRoleInstance": "{role instance value}",
      "appRoleName": "Web",
      "billedSize": 742,
      "clientCity": "San Jose",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientOs": "Windows_NT 10.0.14393",
      "clientStateOrProvince": "California",
      "clientType": "PC",
      "itemCount": 1,
      "name": "my custom event",
      "operationId": "98765",
      "parentId": "12345",
      "resourceGuid": "{guid of resource}",
      "resourceId": "/SUBSCRIPTIONS/{subscription Id}/RESOURCEGROUPS/{resource group in all caps}/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/{function app name in all caps}",
      "sdkVersion": "node:1.8.10",
      "timestamp": "2021-05-04T19:12:36.1850000Z",
      "type": "AppEvent",
    },
    "duration": undefined,
    "endTime": Array [
      1620155556,
      184999943,
    ],
    "ended": undefined,
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 1,
    "links": Array [],
    "name": "my custom event",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "Web",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "0.25.0",
      },
    },
    "spanContext": undefined,
    "spanId": undefined,
    "startTime": Array [
      1620155556,
      184999943,
    ],
    "status": Object {
      "code": 1,
    },
  },
]
`;

exports[`OpenTelemetryAdapter processes app exception as span 1`] = `Array []`;

exports[`OpenTelemetryAdapter processes app exception as span 2`] = `
Array [
  Object {
    "attributes": Object {
      "appRoleInstance": "{role instance ID}",
      "appRoleName": "Web",
      "assembly": "at module.exports (C:/home/site/wwwroot/functionName/index.js:266:43)",
      "billedSize": 3379,
      "clientCity": "San Jose",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientOs": "Windows_NT 10.0.14393",
      "clientStateOrProvince": "California",
      "clientType": "PC",
      "error": true,
      "error.class": "Error: Throwing an uncaught error on purpose.",
      "exceptionType": "Error",
      "id": "uuidWillBeGeneratedForErrorSpans",
      "innermostAssembly": "at module.exports (C:/home/site/wwwroot/functionName/index.js:266:43)",
      "innermostMessage": "Error: Throwing an uncaught error on purpose.",
      "innermostMethod": "module.exports",
      "innermostType": "Error",
      "itemCount": 1,
      "method": "module.exports",
      "name": "at module.exports (C:/home/site/wwwroot/functionName/index.js:266:43)",
      "operationId": "{long operation id}",
      "outerAssembly": "at module.exports (C:/home/site/wwwroot/functionName/index.js:266:43)",
      "outerMethod": "module.exports",
      "outerType": "Error",
      "parentId": "{long operation id}",
      "problemId": "Error at module.exports",
      "resourceGuid": "{resource GUID}",
      "resourceId": "/SUBSCRIPTIONS/{subscription ID}/RESOURCEGROUPS/{resource group name}/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/{function app name}",
      "sdkVersion": "node:1.8.10",
      "severityLevel": 3,
      "timestamp": "2021-05-05T16:44:56.8020000Z",
      "type": "AppExceptions",
    },
    "duration": undefined,
    "endTime": Array [
      1620233096,
      802000046,
    ],
    "ended": undefined,
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 1,
    "links": Array [],
    "name": "at module.exports (C:/home/site/wwwroot/functionName/index.js:266:43)",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "Web",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "0.25.0",
      },
    },
    "spanContext": undefined,
    "spanId": undefined,
    "startTime": Array [
      1620233096,
      802000046,
    ],
    "status": Object {
      "code": 1,
    },
  },
  Object {
    "attributes": Object {
      "appRoleInstance": "{role instance ID}",
      "appRoleName": "Web",
      "assembly": "at module.exports (C:/home/site/wwwroot/functionName/index.js:266:43)",
      "billedSize": 3379,
      "clientCity": "San Jose",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientOs": "Windows_NT 10.0.14393",
      "clientStateOrProvince": "California",
      "clientType": "PC",
      "error": true,
      "error.class": "Error: Throwing an uncaught error on purpose.",
      "exceptionType": "Error",
      "id": "uuidWillBeGeneratedForErrorSpans",
      "innermostAssembly": "at module.exports (C:/home/site/wwwroot/functionName/index.js:266:43)",
      "innermostMessage": "Error: Throwing an uncaught error on purpose.",
      "innermostMethod": "module.exports",
      "innermostType": "Error",
      "itemCount": 1,
      "method": "module.exports",
      "name": "at module.exports (C:/home/site/wwwroot/functionName/index.js:266:43)",
      "operationId": "{long operation id}",
      "outerAssembly": "at module.exports (C:/home/site/wwwroot/functionName/index.js:266:43)",
      "outerMethod": "module.exports",
      "outerType": "Error",
      "parentId": "{long operation id}",
      "problemId": "Error at module.exports",
      "resourceGuid": "{resource GUID}",
      "resourceId": "/SUBSCRIPTIONS/{subscription ID}/RESOURCEGROUPS/{resource group name}/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/{function app name}",
      "sdkVersion": "node:1.8.10",
      "severityLevel": 3,
      "timestamp": "2021-05-05T16:44:56.8020000Z",
      "type": "AppExceptions",
    },
    "duration": undefined,
    "endTime": Array [
      1620233096,
      802000046,
    ],
    "ended": undefined,
    "events": Array [
      Object {
        "attributes": Object {
          "exception.message": "Error: Throwing an uncaught error on purpose.",
          "exception.stacktrace": Array [
            Object {
              "error.message": "Error: Throwing an uncaught error on purpose.",
              "id": "0",
              "outerId": "0",
              "parsedStack": Array [
                Object {
                  "assembly": "at module.exports (path/to/file:lineNumber:charPos)",
                  "fileName": "path/to/file.js",
                  "level": 0,
                  "line": 266,
                  "method": "module.exports",
                },
                Object {
                  "assembly": "at WorkerChannel.invocationRequest (path/to/file:lineNumber:charPos)",
                  "fileName": "path/to/file.js",
                  "level": 1,
                  "line": 18579,
                  "method": "WorkerChannel.invocationRequest (path/to/file:lineNumber:charPos)",
                },
                Object {
                  "assembly": "at ClientDuplexStream.methodName (path/to/file:lineNumber:charPos)",
                  "fileName": "path/to/file:lineNumber:charPos",
                  "level": 2,
                  "line": 18359,
                  "method": "ClientDuplexStream.methodName (Drive:/Directory",
                },
                Object {
                  "assembly": "at ClientDuplexStream.emit (path/to/file:lineNumber:charPos)",
                  "fileName": "file.js",
                  "level": 3,
                  "line": 314,
                  "method": "ClientDuplexStream.emit",
                },
              ],
              "severityLevel": "Error",
              "type": "Error",
            },
          ],
          "exception.type": "at module.exports (C:/home/site/wwwroot/functionName/index.js:266:43)",
        },
        "name": "exception",
        "time": Array [
          1620233096,
          802000046,
        ],
      },
    ],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 1,
    "links": Array [],
    "name": "at module.exports (C:/home/site/wwwroot/functionName/index.js:266:43)",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "Web",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "0.25.0",
      },
    },
    "spanContext": undefined,
    "spanId": undefined,
    "startTime": Array [
      1620233096,
      802000046,
    ],
    "status": Object {
      "code": 2,
      "message": "Error: Throwing an uncaught error on purpose.",
    },
  },
]
`;

exports[`OpenTelemetryAdapter processes app metrics 1`] = `Array []`;

exports[`OpenTelemetryAdapter processes app metrics 2`] = `
Array [
  NoopBoundBaseObserver {},
  NoopBoundBaseObserver {},
  NoopBoundBaseObserver {},
  NoopBoundBaseObserver {},
  NoopBoundBaseObserver {},
  NoopBoundBaseObserver {},
  NoopBoundBaseObserver {},
  NoopBoundBaseObserver {},
  NoopBoundBaseObserver {},
  NoopBoundBaseObserver {},
  NoopBoundBaseObserver {},
]
`;

exports[`OpenTelemetryAdapter processes app performance counters as metrics 1`] = `Array []`;

exports[`OpenTelemetryAdapter processes app performance counters as metrics 2`] = `
Array [
  NoopBoundBaseObserver {},
  NoopBoundBaseObserver {},
  NoopBoundBaseObserver {},
  NoopBoundBaseObserver {},
  NoopBoundBaseObserver {},
]
`;

exports[`OpenTelemetryAdapter processes app request and dependency as spans 1`] = `Array []`;

exports[`OpenTelemetryAdapter processes app request and dependency as spans 2`] = `
Array [
  Object {
    "attributes": Object {
      "appRoleInstance": "very long id string",
      "appRoleName": "functionAppName goes here",
      "billedSize": 1082,
      "clientCity": "Portland",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientStateOrProvince": "Oregon",
      "clientType": "PC",
      "durationMs": 9.1593,
      "http.statusCode": "200",
      "http.url": "https://{function app name}.azurewebsites.net/api/{function name}",
      "id": "09d760d34d75e847",
      "itemCount": 1,
      "name": "{function name}",
      "operationId": "12345",
      "operationName": "{function name}",
      "parentId": "12345",
      "performanceBucket": "<250ms",
      "resourceGuid": "resourceGuid",
      "resourceId": "/SUBSCRIPTIONS/subscriptionID goes here/RESOURCEGROUPS/resource group goes here/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/{function app name}",
      "sdkVersion": "azurefunctions: 3.0.15571.0",
      "success": true,
      "timestamp": "2021-04-29T22:41:14.1238381Z",
      "type": "AppRequest",
    },
    "duration": undefined,
    "endTime": Array [
      1619736074,
      131999969,
    ],
    "ended": undefined,
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 1,
    "links": Array [],
    "name": "{function name}",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "{function name}",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "0.25.0",
      },
    },
    "spanContext": undefined,
    "spanId": undefined,
    "startTime": Array [
      1619736074,
      122999907,
    ],
    "status": Object {
      "code": 1,
    },
  },
  Object {
    "attributes": Object {
      "appRoleInstance": "very long id string",
      "appRoleName": "functionAppName goes here",
      "billedSize": 1082,
      "clientCity": "Portland",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientStateOrProvince": "Oregon",
      "clientType": "PC",
      "durationMs": 9.1593,
      "http.statusCode": "200",
      "http.url": "https://{function app name}.azurewebsites.net/api/{function name}",
      "id": "09d760d34d75e847",
      "itemCount": 1,
      "name": "{function name}",
      "operationId": "12345",
      "operationName": "{function name}",
      "parentId": "12345",
      "performanceBucket": "<250ms",
      "resourceGuid": "resourceGuid",
      "resourceId": "/SUBSCRIPTIONS/subscriptionID goes here/RESOURCEGROUPS/resource group goes here/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/{function app name}",
      "sdkVersion": "azurefunctions: 3.0.15571.0",
      "success": true,
      "timestamp": "2021-04-29T22:41:14.1238381Z",
      "type": "AppRequest",
    },
    "duration": undefined,
    "endTime": Array [
      1619736074,
      131999969,
    ],
    "ended": undefined,
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 1,
    "links": Array [],
    "name": "{function name}",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "{function name}",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "0.25.0",
      },
    },
    "spanContext": undefined,
    "spanId": undefined,
    "startTime": Array [
      1619736074,
      122999907,
    ],
    "status": Object {
      "code": 1,
    },
  },
]
`;

exports[`OpenTelemetryAdapter processes app request and dependency as spans 3`] = `
Array [
  Object {
    "attributes": Object {
      "appRoleInstance": "very long id string",
      "appRoleName": "functionAppName goes here",
      "billedSize": 1082,
      "clientCity": "Portland",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientStateOrProvince": "Oregon",
      "clientType": "PC",
      "durationMs": 9.1593,
      "http.statusCode": "200",
      "http.url": "https://{function app name}.azurewebsites.net/api/{function name}",
      "id": "09d760d34d75e847",
      "itemCount": 1,
      "name": "{function name}",
      "operationId": "12345",
      "operationName": "{function name}",
      "parentId": "12345",
      "performanceBucket": "<250ms",
      "resourceGuid": "resourceGuid",
      "resourceId": "/SUBSCRIPTIONS/subscriptionID goes here/RESOURCEGROUPS/resource group goes here/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/{function app name}",
      "sdkVersion": "azurefunctions: 3.0.15571.0",
      "success": true,
      "timestamp": "2021-04-29T22:41:14.1238381Z",
      "type": "AppRequest",
    },
    "duration": undefined,
    "endTime": Array [
      1619736074,
      131999969,
    ],
    "ended": undefined,
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 1,
    "links": Array [],
    "name": "{function name}",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "{function name}",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "0.25.0",
      },
    },
    "spanContext": undefined,
    "spanId": undefined,
    "startTime": Array [
      1619736074,
      122999907,
    ],
    "status": Object {
      "code": 1,
    },
  },
  Object {
    "attributes": Object {
      "appRoleInstance": "very long id string",
      "appRoleName": "functionAppName goes here",
      "billedSize": 1082,
      "clientCity": "Portland",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientStateOrProvince": "Oregon",
      "clientType": "PC",
      "durationMs": 9.1593,
      "http.statusCode": "200",
      "http.url": "https://{function app name}.azurewebsites.net/api/{function name}",
      "id": "09d760d34d75e847",
      "itemCount": 1,
      "name": "{function name}",
      "operationId": "12345",
      "operationName": "{function name}",
      "parentId": "12345",
      "performanceBucket": "<250ms",
      "resourceGuid": "resourceGuid",
      "resourceId": "/SUBSCRIPTIONS/subscriptionID goes here/RESOURCEGROUPS/resource group goes here/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/{function app name}",
      "sdkVersion": "azurefunctions: 3.0.15571.0",
      "success": true,
      "timestamp": "2021-04-29T22:41:14.1238381Z",
      "type": "AppRequest",
    },
    "duration": undefined,
    "endTime": Array [
      1619736074,
      131999969,
    ],
    "ended": undefined,
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 1,
    "links": Array [],
    "name": "{function name}",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "{function name}",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "0.25.0",
      },
    },
    "spanContext": undefined,
    "spanId": undefined,
    "startTime": Array [
      1619736074,
      122999907,
    ],
    "status": Object {
      "code": 1,
    },
  },
  Object {
    "attributes": Object {
      "appRoleInstance": "{role instance id}",
      "appRoleName": "Web",
      "billedSize": 786,
      "clientCity": "San Jose",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientOs": "Windows_NT 10.0.14393",
      "clientStateOrProvince": "California",
      "clientType": "PC",
      "dependencyType": "http",
      "durationMs": 231,
      "http.target": "{target property of client.trackDependency}",
      "id": "{id value}",
      "itemCount": 1,
      "name": "External/{name property of client.trackDependency}",
      "operationId": "67890",
      "parentId": "12345",
      "performanceBucket": "<250ms",
      "resourceGuid": "{resource uuid4}",
      "resourceId": "/SUBSCRIPTIONS/{subscription id}/RESOURCEGROUPS/{resource group in all caps}/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/{function app name in all caps}",
      "sdkVersion": "node:1.8.10",
      "success": true,
      "timestamp": "2021-05-04T22:01:10.9400000Z",
      "type": "AppDependency",
    },
    "duration": undefined,
    "endTime": Array [
      1620165671,
      171000004,
    ],
    "ended": undefined,
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 1,
    "links": Array [],
    "name": "External/{name property of client.trackDependency}",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "Web",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "0.25.0",
      },
    },
    "spanContext": undefined,
    "spanId": undefined,
    "startTime": Array [
      1620165670,
      940000057,
    ],
    "status": Object {
      "code": 1,
    },
  },
  Object {
    "attributes": Object {
      "appRoleInstance": "{role instance id}",
      "appRoleName": "Web",
      "billedSize": 786,
      "clientCity": "San Jose",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientOs": "Windows_NT 10.0.14393",
      "clientStateOrProvince": "California",
      "clientType": "PC",
      "dependencyType": "http",
      "durationMs": 231,
      "http.target": "{target property of client.trackDependency}",
      "id": "{id value}",
      "itemCount": 1,
      "name": "External/{name property of client.trackDependency}",
      "operationId": "67890",
      "parentId": "12345",
      "performanceBucket": "<250ms",
      "resourceGuid": "{resource uuid4}",
      "resourceId": "/SUBSCRIPTIONS/{subscription id}/RESOURCEGROUPS/{resource group in all caps}/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/{function app name in all caps}",
      "sdkVersion": "node:1.8.10",
      "success": true,
      "timestamp": "2021-05-04T22:01:10.9400000Z",
      "type": "AppDependency",
    },
    "duration": undefined,
    "endTime": Array [
      1620165671,
      171000004,
    ],
    "ended": undefined,
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 1,
    "links": Array [],
    "name": "External/{name property of client.trackDependency}",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "Web",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "0.25.0",
      },
    },
    "spanContext": undefined,
    "spanId": undefined,
    "startTime": Array [
      1620165670,
      940000057,
    ],
    "status": Object {
      "code": 1,
    },
  },
]
`;

exports[`OpenTelemetryAdapter processes app request and dependency when sent as array of strings 1`] = `Array []`;

exports[`OpenTelemetryAdapter processes app request and dependency when sent as array of strings 2`] = `
Array [
  Object {
    "attributes": Object {
      "appRoleInstance": "roleInstanceId",
      "appRoleName": "Web",
      "billedSize": 786,
      "clientCity": "San Jose",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientOs": "Windows_NT 10.0.14393",
      "clientStateOrProvince": "California",
      "clientType": "PC",
      "dependencyType": "Buffer",
      "durationMs": 231,
      "id": "recordId",
      "itemCount": 1,
      "name": "node buffer",
      "operationId": "parentId",
      "parentId": "parentId",
      "performanceBucket": "<250ms",
      "resourceGuid": "resourceGuid",
      "resourceId": "/SUBSCRIPTIONS/subscriptionId/RESOURCEGROUPS/resourceGroupName/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/functionAppName",
      "sdkVersion": "node:1.8.10",
      "success": true,
      "target": "Buffer",
      "timestamp": "2021-05-10T19:19:31.9080000Z",
      "type": "AppDependency",
    },
    "duration": undefined,
    "endTime": Array [
      1620674372,
      138999939,
    ],
    "ended": undefined,
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 1,
    "links": Array [],
    "name": "node buffer",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "Web",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "0.25.0",
      },
    },
    "spanContext": undefined,
    "spanId": undefined,
    "startTime": Array [
      1620674371,
      907999992,
    ],
    "status": Object {
      "code": 1,
    },
  },
  Object {
    "attributes": Object {
      "appRoleInstance": "roleInstanceId",
      "appRoleName": "Web",
      "billedSize": 786,
      "clientCity": "San Jose",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientOs": "Windows_NT 10.0.14393",
      "clientStateOrProvince": "California",
      "clientType": "PC",
      "dependencyType": "Buffer",
      "durationMs": 231,
      "id": "recordId",
      "itemCount": 1,
      "name": "node buffer",
      "operationId": "parentId",
      "parentId": "parentId",
      "performanceBucket": "<250ms",
      "resourceGuid": "resourceGuid",
      "resourceId": "/SUBSCRIPTIONS/subscriptionId/RESOURCEGROUPS/resourceGroupName/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/functionAppName",
      "sdkVersion": "node:1.8.10",
      "success": true,
      "target": "Buffer",
      "timestamp": "2021-05-10T19:19:31.9080000Z",
      "type": "AppDependency",
    },
    "duration": undefined,
    "endTime": Array [
      1620674372,
      138999939,
    ],
    "ended": undefined,
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 1,
    "links": Array [],
    "name": "node buffer",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "Web",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "0.25.0",
      },
    },
    "spanContext": undefined,
    "spanId": undefined,
    "startTime": Array [
      1620674371,
      907999992,
    ],
    "status": Object {
      "code": 1,
    },
  },
  Object {
    "attributes": Object {
      "appRoleInstance": "dw0-hr0-1068-25",
      "appRoleName": "Web",
      "billedSize": 834,
      "clientCity": "San Jose",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientOs": "Windows_NT 10.0.14393",
      "clientStateOrProvince": "California",
      "clientType": "PC",
      "data": "SELECT * FROM Customers",
      "dependencyType": "ZSQL",
      "durationMs": 231,
      "id": "id",
      "itemCount": 1,
      "name": "select customers proc",
      "operationId": "opId",
      "parentId": "parentId",
      "performanceBucket": "<250ms",
      "resourceGuid": "resourceGuid",
      "resourceId": "/SUBSCRIPTIONS/subscriptionId/RESOURCEGROUPS/resourceGroupName/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/functionAppName",
      "sdkVersion": "node:1.8.10",
      "success": true,
      "target": "http://dbname",
      "timestamp": "2021-05-10T19:19:32.0490000Z",
      "type": "AppDependency",
    },
    "duration": undefined,
    "endTime": Array [
      1620674372,
      279999971,
    ],
    "ended": undefined,
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 1,
    "links": Array [],
    "name": "select customers proc",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "Web",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "0.25.0",
      },
    },
    "spanContext": undefined,
    "spanId": undefined,
    "startTime": Array [
      1620674372,
      49000025,
    ],
    "status": Object {
      "code": 1,
    },
  },
  Object {
    "attributes": Object {
      "appRoleInstance": "dw0-hr0-1068-25",
      "appRoleName": "Web",
      "billedSize": 834,
      "clientCity": "San Jose",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientOs": "Windows_NT 10.0.14393",
      "clientStateOrProvince": "California",
      "clientType": "PC",
      "data": "SELECT * FROM Customers",
      "dependencyType": "ZSQL",
      "durationMs": 231,
      "id": "id",
      "itemCount": 1,
      "name": "select customers proc",
      "operationId": "opId",
      "parentId": "parentId",
      "performanceBucket": "<250ms",
      "resourceGuid": "resourceGuid",
      "resourceId": "/SUBSCRIPTIONS/subscriptionId/RESOURCEGROUPS/resourceGroupName/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/functionAppName",
      "sdkVersion": "node:1.8.10",
      "success": true,
      "target": "http://dbname",
      "timestamp": "2021-05-10T19:19:32.0490000Z",
      "type": "AppDependency",
    },
    "duration": undefined,
    "endTime": Array [
      1620674372,
      279999971,
    ],
    "ended": undefined,
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 1,
    "links": Array [],
    "name": "select customers proc",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "Web",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "0.25.0",
      },
    },
    "spanContext": undefined,
    "spanId": undefined,
    "startTime": Array [
      1620674372,
      49000025,
    ],
    "status": Object {
      "code": 1,
    },
  },
  Object {
    "attributes": Object {
      "appRoleInstance": "roleInstanceId",
      "appRoleName": "functionAppName",
      "billedSize": 1087,
      "clientCity": "Pittsburgh",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientStateOrProvince": "Pennsylvania",
      "clientType": "PC",
      "durationMs": 30021.5457,
      "http.statusCode": "200",
      "http.url": "https://functionAppName.azurewebsites.net/api/functionName",
      "id": "bc40802d79559544",
      "itemCount": 1,
      "name": "functionName",
      "operationId": "operationId",
      "operationName": "functionName",
      "parentId": "parentId",
      "performanceBucket": "30sec-1min",
      "resourceGuid": "resourceGuid",
      "resourceId": "/SUBSCRIPTIONS/subscriptionId/RESOURCEGROUPS/resourceGroupName/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/functionAppName",
      "sdkVersion": "azurefunctions: 3.0.15584.0",
      "success": true,
      "timestamp": "2021-05-10T19:19:21.0600528Z",
      "type": "AppRequest",
    },
    "duration": undefined,
    "endTime": Array [
      1620674391,
      81000090,
    ],
    "ended": undefined,
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 1,
    "links": Array [],
    "name": "functionName",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "functionName",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "0.25.0",
      },
    },
    "spanContext": undefined,
    "spanId": undefined,
    "startTime": Array [
      1620674361,
      59999943,
    ],
    "status": Object {
      "code": 1,
    },
  },
  Object {
    "attributes": Object {
      "appRoleInstance": "roleInstanceId",
      "appRoleName": "functionAppName",
      "billedSize": 1087,
      "clientCity": "Pittsburgh",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientStateOrProvince": "Pennsylvania",
      "clientType": "PC",
      "durationMs": 30021.5457,
      "http.statusCode": "200",
      "http.url": "https://functionAppName.azurewebsites.net/api/functionName",
      "id": "bc40802d79559544",
      "itemCount": 1,
      "name": "functionName",
      "operationId": "operationId",
      "operationName": "functionName",
      "parentId": "parentId",
      "performanceBucket": "30sec-1min",
      "resourceGuid": "resourceGuid",
      "resourceId": "/SUBSCRIPTIONS/subscriptionId/RESOURCEGROUPS/resourceGroupName/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/functionAppName",
      "sdkVersion": "azurefunctions: 3.0.15584.0",
      "success": true,
      "timestamp": "2021-05-10T19:19:21.0600528Z",
      "type": "AppRequest",
    },
    "duration": undefined,
    "endTime": Array [
      1620674391,
      81000090,
    ],
    "ended": undefined,
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 1,
    "links": Array [],
    "name": "functionName",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "functionName",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "0.25.0",
      },
    },
    "spanContext": undefined,
    "spanId": undefined,
    "startTime": Array [
      1620674361,
      59999943,
    ],
    "status": Object {
      "code": 1,
    },
  },
]
`;

exports[`OpenTelemetryAdapter processes app request and dependency when sent as array of strings 3`] = `
Array [
  Object {
    "attributes": Object {
      "appRoleInstance": "roleInstanceId",
      "appRoleName": "Web",
      "billedSize": 786,
      "clientCity": "San Jose",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientOs": "Windows_NT 10.0.14393",
      "clientStateOrProvince": "California",
      "clientType": "PC",
      "dependencyType": "Buffer",
      "durationMs": 231,
      "id": "recordId",
      "itemCount": 1,
      "name": "node buffer",
      "operationId": "parentId",
      "parentId": "parentId",
      "performanceBucket": "<250ms",
      "resourceGuid": "resourceGuid",
      "resourceId": "/SUBSCRIPTIONS/subscriptionId/RESOURCEGROUPS/resourceGroupName/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/functionAppName",
      "sdkVersion": "node:1.8.10",
      "success": true,
      "target": "Buffer",
      "timestamp": "2021-05-10T19:19:31.9080000Z",
      "type": "AppDependency",
    },
    "duration": undefined,
    "endTime": Array [
      1620674372,
      138999939,
    ],
    "ended": undefined,
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 1,
    "links": Array [],
    "name": "node buffer",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "Web",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "0.25.0",
      },
    },
    "spanContext": undefined,
    "spanId": undefined,
    "startTime": Array [
      1620674371,
      907999992,
    ],
    "status": Object {
      "code": 1,
    },
  },
  Object {
    "attributes": Object {
      "appRoleInstance": "roleInstanceId",
      "appRoleName": "Web",
      "billedSize": 786,
      "clientCity": "San Jose",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientOs": "Windows_NT 10.0.14393",
      "clientStateOrProvince": "California",
      "clientType": "PC",
      "dependencyType": "Buffer",
      "durationMs": 231,
      "id": "recordId",
      "itemCount": 1,
      "name": "node buffer",
      "operationId": "parentId",
      "parentId": "parentId",
      "performanceBucket": "<250ms",
      "resourceGuid": "resourceGuid",
      "resourceId": "/SUBSCRIPTIONS/subscriptionId/RESOURCEGROUPS/resourceGroupName/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/functionAppName",
      "sdkVersion": "node:1.8.10",
      "success": true,
      "target": "Buffer",
      "timestamp": "2021-05-10T19:19:31.9080000Z",
      "type": "AppDependency",
    },
    "duration": undefined,
    "endTime": Array [
      1620674372,
      138999939,
    ],
    "ended": undefined,
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 1,
    "links": Array [],
    "name": "node buffer",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "Web",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "0.25.0",
      },
    },
    "spanContext": undefined,
    "spanId": undefined,
    "startTime": Array [
      1620674371,
      907999992,
    ],
    "status": Object {
      "code": 1,
    },
  },
  Object {
    "attributes": Object {
      "appRoleInstance": "dw0-hr0-1068-25",
      "appRoleName": "Web",
      "billedSize": 834,
      "clientCity": "San Jose",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientOs": "Windows_NT 10.0.14393",
      "clientStateOrProvince": "California",
      "clientType": "PC",
      "data": "SELECT * FROM Customers",
      "dependencyType": "ZSQL",
      "durationMs": 231,
      "id": "id",
      "itemCount": 1,
      "name": "select customers proc",
      "operationId": "opId",
      "parentId": "parentId",
      "performanceBucket": "<250ms",
      "resourceGuid": "resourceGuid",
      "resourceId": "/SUBSCRIPTIONS/subscriptionId/RESOURCEGROUPS/resourceGroupName/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/functionAppName",
      "sdkVersion": "node:1.8.10",
      "success": true,
      "target": "http://dbname",
      "timestamp": "2021-05-10T19:19:32.0490000Z",
      "type": "AppDependency",
    },
    "duration": undefined,
    "endTime": Array [
      1620674372,
      279999971,
    ],
    "ended": undefined,
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 1,
    "links": Array [],
    "name": "select customers proc",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "Web",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "0.25.0",
      },
    },
    "spanContext": undefined,
    "spanId": undefined,
    "startTime": Array [
      1620674372,
      49000025,
    ],
    "status": Object {
      "code": 1,
    },
  },
  Object {
    "attributes": Object {
      "appRoleInstance": "dw0-hr0-1068-25",
      "appRoleName": "Web",
      "billedSize": 834,
      "clientCity": "San Jose",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientOs": "Windows_NT 10.0.14393",
      "clientStateOrProvince": "California",
      "clientType": "PC",
      "data": "SELECT * FROM Customers",
      "dependencyType": "ZSQL",
      "durationMs": 231,
      "id": "id",
      "itemCount": 1,
      "name": "select customers proc",
      "operationId": "opId",
      "parentId": "parentId",
      "performanceBucket": "<250ms",
      "resourceGuid": "resourceGuid",
      "resourceId": "/SUBSCRIPTIONS/subscriptionId/RESOURCEGROUPS/resourceGroupName/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/functionAppName",
      "sdkVersion": "node:1.8.10",
      "success": true,
      "target": "http://dbname",
      "timestamp": "2021-05-10T19:19:32.0490000Z",
      "type": "AppDependency",
    },
    "duration": undefined,
    "endTime": Array [
      1620674372,
      279999971,
    ],
    "ended": undefined,
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 1,
    "links": Array [],
    "name": "select customers proc",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "Web",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "0.25.0",
      },
    },
    "spanContext": undefined,
    "spanId": undefined,
    "startTime": Array [
      1620674372,
      49000025,
    ],
    "status": Object {
      "code": 1,
    },
  },
  Object {
    "attributes": Object {
      "appRoleInstance": "roleInstanceId",
      "appRoleName": "functionAppName",
      "billedSize": 1087,
      "clientCity": "Pittsburgh",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientStateOrProvince": "Pennsylvania",
      "clientType": "PC",
      "durationMs": 30021.5457,
      "http.statusCode": "200",
      "http.url": "https://functionAppName.azurewebsites.net/api/functionName",
      "id": "bc40802d79559544",
      "itemCount": 1,
      "name": "functionName",
      "operationId": "operationId",
      "operationName": "functionName",
      "parentId": "parentId",
      "performanceBucket": "30sec-1min",
      "resourceGuid": "resourceGuid",
      "resourceId": "/SUBSCRIPTIONS/subscriptionId/RESOURCEGROUPS/resourceGroupName/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/functionAppName",
      "sdkVersion": "azurefunctions: 3.0.15584.0",
      "success": true,
      "timestamp": "2021-05-10T19:19:21.0600528Z",
      "type": "AppRequest",
    },
    "duration": undefined,
    "endTime": Array [
      1620674391,
      81000090,
    ],
    "ended": undefined,
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 1,
    "links": Array [],
    "name": "functionName",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "functionName",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "0.25.0",
      },
    },
    "spanContext": undefined,
    "spanId": undefined,
    "startTime": Array [
      1620674361,
      59999943,
    ],
    "status": Object {
      "code": 1,
    },
  },
  Object {
    "attributes": Object {
      "appRoleInstance": "roleInstanceId",
      "appRoleName": "functionAppName",
      "billedSize": 1087,
      "clientCity": "Pittsburgh",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientStateOrProvince": "Pennsylvania",
      "clientType": "PC",
      "durationMs": 30021.5457,
      "http.statusCode": "200",
      "http.url": "https://functionAppName.azurewebsites.net/api/functionName",
      "id": "bc40802d79559544",
      "itemCount": 1,
      "name": "functionName",
      "operationId": "operationId",
      "operationName": "functionName",
      "parentId": "parentId",
      "performanceBucket": "30sec-1min",
      "resourceGuid": "resourceGuid",
      "resourceId": "/SUBSCRIPTIONS/subscriptionId/RESOURCEGROUPS/resourceGroupName/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/functionAppName",
      "sdkVersion": "azurefunctions: 3.0.15584.0",
      "success": true,
      "timestamp": "2021-05-10T19:19:21.0600528Z",
      "type": "AppRequest",
    },
    "duration": undefined,
    "endTime": Array [
      1620674391,
      81000090,
    ],
    "ended": undefined,
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 1,
    "links": Array [],
    "name": "functionName",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "functionName",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "0.25.0",
      },
    },
    "spanContext": undefined,
    "spanId": undefined,
    "startTime": Array [
      1620674361,
      59999943,
    ],
    "status": Object {
      "code": 1,
    },
  },
  Object {
    "attributes": Object {
      "appRoleInstance": "{role instance id}",
      "appRoleName": "Web",
      "billedSize": 786,
      "clientCity": "San Jose",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientOs": "Windows_NT 10.0.14393",
      "clientStateOrProvince": "California",
      "clientType": "PC",
      "dependencyType": "http",
      "durationMs": 231,
      "http.target": "{target property of client.trackDependency}",
      "id": "{id value}",
      "itemCount": 1,
      "name": "External/{name property of client.trackDependency}",
      "operationId": "67890",
      "parentId": "12345",
      "performanceBucket": "<250ms",
      "resourceGuid": "{resource uuid4}",
      "resourceId": "/SUBSCRIPTIONS/{subscription id}/RESOURCEGROUPS/{resource group in all caps}/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/{function app name in all caps}",
      "sdkVersion": "node:1.8.10",
      "success": true,
      "timestamp": "2021-05-04T22:01:10.9400000Z",
      "type": "AppDependency",
    },
    "duration": undefined,
    "endTime": Array [
      1620165671,
      171000004,
    ],
    "ended": undefined,
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 1,
    "links": Array [],
    "name": "External/{name property of client.trackDependency}",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "Web",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "0.25.0",
      },
    },
    "spanContext": undefined,
    "spanId": undefined,
    "startTime": Array [
      1620165670,
      940000057,
    ],
    "status": Object {
      "code": 1,
    },
  },
  Object {
    "attributes": Object {
      "appRoleInstance": "{role instance id}",
      "appRoleName": "Web",
      "billedSize": 786,
      "clientCity": "San Jose",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientOs": "Windows_NT 10.0.14393",
      "clientStateOrProvince": "California",
      "clientType": "PC",
      "dependencyType": "http",
      "durationMs": 231,
      "http.target": "{target property of client.trackDependency}",
      "id": "{id value}",
      "itemCount": 1,
      "name": "External/{name property of client.trackDependency}",
      "operationId": "67890",
      "parentId": "12345",
      "performanceBucket": "<250ms",
      "resourceGuid": "{resource uuid4}",
      "resourceId": "/SUBSCRIPTIONS/{subscription id}/RESOURCEGROUPS/{resource group in all caps}/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/{function app name in all caps}",
      "sdkVersion": "node:1.8.10",
      "success": true,
      "timestamp": "2021-05-04T22:01:10.9400000Z",
      "type": "AppDependency",
    },
    "duration": undefined,
    "endTime": Array [
      1620165671,
      171000004,
    ],
    "ended": undefined,
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 1,
    "links": Array [],
    "name": "External/{name property of client.trackDependency}",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "Web",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "0.25.0",
      },
    },
    "spanContext": undefined,
    "spanId": undefined,
    "startTime": Array [
      1620165670,
      940000057,
    ],
    "status": Object {
      "code": 1,
    },
  },
]
`;
